[tool.poetry]
name = "kgd_service"
version = "0.1.0"
description = "API service for unreliable taxpayers (kgd.gov.kz)"
authors = ["yaitzhan <y.aitzhanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
